--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,9 @@ source("_packages.R")
 source("R/functions.R")
 tar_load(medford_from_state)
 tar_load(medford_from_city)
+tar_load(hhs_capacity_ma)
+tar_load(hhs_capacity_ma_focal)
+tar_load(hhs_capacity_ma_focal_latest_pretty)
 ```
 
 Positivity rates (what percent of tests show covid; if this is high, it could indicate that many other cases are being missed).
@@ -34,4 +37,21 @@ New covid cases per day in Medford
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}	
 plot_cases <- ggplot(medford_from_city, aes(x=DATE, y=`New Cases`)) + geom_line()+ theme_light() + xlab("Date") + ylab("Number of new cases per day")
 print(plot_cases)
+```
+
+### Hospital data
+
+
+The US Department of Health and Human Services gives data on hospital usage. Here are data for hospitals in this area.
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+knitr::kable(hhs_capacity_ma_focal_latest_pretty)
+```
+
+
+Plotting percentage of ICU patients with covid over time. Some hospitals have much more frequently updated data than others; some is fairly gappy.
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+try(hospital_plot <- ggplot(hhs_capacity_ma_focal, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid") + ylim(c(50, 100)) )
+print(hospital_plot)
 ```
