--- a/index.Rmd
+++ b/index.Rmd
@@ -49,9 +49,10 @@ knitr::kable(hhs_capacity_ma_focal_latest_pretty)
 ```
 
 
-Plotting percentage of ICU patients with covid over time. Some hospitals have much more frequently updated data than others; some is fairly gappy.
+Plotting percentage of ICU patients with covid over time. Some hospitals have much more frequently updated data than others; some is fairly gappy. This just plots the hospitals that average with at least 50 ICU beds per week.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-try(hospital_plot <- ggplot(hhs_capacity_ma_focal, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid") + ylim(c(50, 100)) )
+major_hospitals <- subset(hhs_capacity_ma_focal, total_icu_beds_7_day_avg>=50)
+try(hospital_plot <- ggplot(major_hospitals, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid") + ylim(c(50, 100)) )
 print(hospital_plot)
 ```
