--- a/index.Rmd
+++ b/index.Rmd
@@ -23,19 +23,20 @@ tar_load(medford_from_city)
 tar_load(hhs_capacity_ma)
 tar_load(hhs_capacity_ma_focal)
 tar_load(hhs_capacity_ma_focal_latest_pretty)
+tar_load(state_hospital_data)
 ```
 
 Positivity rates (what percent of tests show covid; if this is high, it could indicate that many other cases are being missed).
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}	
-plot_positivity <- ggplot(medford_from_state, aes(x=End_Date, y=Percent_Positivity)) + geom_line()+ theme_light() + xlab("Date") + ylab("Positivity rate of tests for the week ending this date")
+plot_positivity <- ggplot(medford_from_state, aes(x=End_Date, y=Percent_Positivity)) + geom_line()+ theme_light() + xlab("Date") + ylab("Positivity rate of tests for the week ending this date") + ggtitle("Positivity rate in Medford")
 print(plot_positivity)
 ```
 
 New covid cases per day in Medford
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}	
-plot_cases <- ggplot(medford_from_city, aes(x=DATE, y=`New Cases`)) + geom_line()+ theme_light() + xlab("Date") + ylab("Number of new cases per day")
+plot_cases <- ggplot(medford_from_city, aes(x=DATE, y=`New Cases`)) + geom_line()+ theme_light() + xlab("Date") + ylab("Number of new cases per day") + ggtitle("New covid cases in Medford per day")
 print(plot_cases)
 ```
 
@@ -53,6 +54,35 @@ Plotting percentage of ICU patients with covid over time. Some hospitals have mu
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 major_hospitals <- subset(hhs_capacity_ma_focal, total_icu_beds_7_day_avg>=50)
-try(hospital_plot <- ggplot(major_hospitals, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid") + ylim(c(50, 100)) )
+try(hospital_plot <- ggplot(major_hospitals, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid at major Greater Boston hospitals") + ylim(c(50, 100)))
 print(hospital_plot)
+```
+
+The state also releases information about conditions in all hospitals in the state:
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+covid_patients_plot <- ggplot(state_hospital_data, aes(x=Date, y=`Total number of COVID patients in hospital today`)) + geom_line() + theme_light() + ylab("Total covid patients") +  xlab("Date") + ggtitle("Total number of patients hospitalized for covid in MA")
+print(covid_patients_plot)
+```
+
+Including the number of patients in the ICU for covid:
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+covid_patients_ICU_plot <- ggplot(state_hospital_data, aes(x=Date, y=ICU)) + geom_line() + theme_light() + ylab("Total covid patients in ICU in MA") +  xlab("Date") + ggtitle("Total number of patients in the ICU for covid in MA")
+print(covid_patients_ICU_plot)
+```
+
+And those intubated:
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+covid_patients_intubated_plot <- ggplot(state_hospital_data, aes(x=Date, y=Intubated)) + geom_line() + theme_light() + ylab("Total intubated covid patients in MA") +  xlab("Date") + ggtitle("Total number of patients intubated for covid in MA")
+print(covid_patients_intubated_plot)
+```
+
+We can also see what percentage of people who have been hospitalized for covid had been fully vaccinated first. Vaccination is *very, very* effective at reducing severe illness and is strongly recommended by health agencies, but just as airbags and seatbelts reduce but do not completely eliminate car deaths, there is a small risk of a breakthrough infection that can lead to hospitalization. 
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+
+covid_patients_vaxxed_plot <- ggplot(state_hospital_data, aes(x=Date, y=Percentage_Hospitalized_Who_Were_Vaccinated)) + geom_line() + theme_light() + ylab("Percentage of people hospitalized for covid who were fully vaccinated first") +  xlab("Date") + ggtitle("Percentage of hospitalized covid patients who were fully vaccinated in MA")
+print(covid_patients_vaxxed_plot)
 ```
