--- a/index.Rmd
+++ b/index.Rmd
@@ -43,17 +43,17 @@ print(plot_cases)
 ### Hospital data
 
 
-The US Department of Health and Human Services gives data on hospital usage. Here are data for hospitals in this area.
+The US Department of Health and Human Services gives data on hospital usage. Here are data for hospitals in this area with at least 25 ICU beds.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 knitr::kable(hhs_capacity_ma_focal_latest_pretty)
 ```
 
 
-Plotting percentage of ICU patients with covid over time. Some hospitals have much more frequently updated data than others; some is fairly gappy. This just plots the hospitals that average with at least 50 ICU beds per week.
+Plotting percentage of ICU patients with covid over time. Some hospitals have much more frequently updated data than others; some is fairly gappy. This just plots the hospitals that average at least 25 staffed ICU beds per week.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-major_hospitals <- subset(hhs_capacity_ma_focal, total_icu_beds_7_day_avg>=50)
+major_hospitals <- subset(hhs_capacity_ma_focal, total_icu_beds_7_day_avg>=25)
 try(hospital_plot <- ggplot(major_hospitals, aes(x=DATE, y=percentage_adult_hospital_inpatient_ICU_bed_occupied_of_all_inpatient_ICU_beds)) + geom_line(aes(colour=hospital_name)) + theme_light() + ylab("Percent of ICU patients witth covid") + xlab("Date") + ggtitle("Percent of ICU patients with covid at major Greater Boston hospitals") + ylim(c(50, 100)))
 print(hospital_plot)
 ```
