--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ plot_positivity <- ggplot(medford_from_state, aes(x=End_Date, y=Percent_Positivi
 print(plot_positivity)
 ```
 
-New covid cases per day in Medford (seven day average in red) [*temporary issue in year until Medford updates its data for 2022*]
+New covid cases per day in Medford (seven day average in red)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}	
 plot_cases <- ggplot(medford_from_city, aes(x=DATE, y=`New Cases`)) + geom_line(color="darkgray") + geom_line(aes(y=zoo::rollmean(`New Cases`, 7, na.pad=TRUE, align="right")), color="red")+ theme_light() + xlab("Date") + ylab("Number of new cases per day") + ggtitle("New covid cases in Medford per day")
